# MyMoney

./: .gitignore  docker-compose.yml  package-lock.json
my-money-backend/: Dockerfile  conftest.py  entrypoint.sh  pyproject.toml  pytest.ini
my-money-backend/mixers/: transactions_mixer.py
my-money-backend/my_money/: asgi.py  settings.py  urls.py  wsgi.py
my-money-backend/transactions/: admin.py  models.py  pagination.py  serializers.py  tests.py  views.py
my-money-backend/transactions/migrations/: 0001_initial.py  0002_alter_person_options_alter_transaction_description.py  0002_rename_transactions_transaction.py
my-money-backend/transactions/tests/: models_tests.py  views_actions_tests.py  views_crud_tests.py
my-money-frontend/: package-lock.json  package.json
my-money-frontend/public/: index.html
my-money-frontend/src/: App.tsx  routes.tsx
my-money-frontend/src/api/: api.ts  login.ts  people.ts  transactions.ts
my-money-frontend/src/components/: BackgroundScreen.tsx
my-money-frontend/src/components/BackgroundScreen/: BackgroundSreen.test.tsx  index.tsx
my-money-frontend/src/interfaces/: backgroundScreen.ts  dashboard.ts  header.ts  login.ts  logo.ts  pagination.ts  selectedPage.ts  sideBarMenu.ts  transaction.ts  transactionModal.ts  transactionTable.ts  transactionsTableData.ts  yearSelector.ts
my-money-frontend/src/screens/: dashboard.tsx  login.tsx  transaction.tsx  transactions.tsx
my-money-frontend/src/styles/: theme.ts
my-money-frontend/src/tests/: login.test.tsx
my-money-frontend/src/utils/: getWeekdayFromData.ts
(+26 files in other folders)
